Add support for C++ intellisense

--- a/Public/Src/IDE/VsCode/client/package.json
+++ b/Public/Src/IDE/VsCode/client/package.json
@@ -20,6 +20,8 @@
   "main": "./out/src/extension",
   "activationEvents": [
     "onLanguage:DScript",
+    "onLanguage:cpp",
+    "onLanguage:c",
     "onCommand:DScript.reloadWorkspace"
   ],
   "contributes": {
